[gd_scene load_steps=2 format=3 uid="uid://dyu1p85lcff34"]

[ext_resource type="Script" path="res://Scenes/Player/PauseMenu.gd" id="1_d3bpp"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 649.0
script = ExtResource("1_d3bpp")

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_right = 173.0
offset_bottom = 31.0
text = "Return to Main Menu"

[node name="EquipmentSelect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -409.0
offset_bottom = 645.0
grow_horizontal = 0

[node name="Grapple" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_right = 70.0
offset_bottom = 31.0
toggle_mode = true
text = "Grapple"

[node name="Reel" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_left = -1.0
offset_top = 64.0
offset_right = 69.0
offset_bottom = 95.0
toggle_mode = true
text = "Reel"

[node name="Blast" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_left = -1.0
offset_top = 32.0
offset_right = 69.0
offset_bottom = 63.0
toggle_mode = true
text = "Blast
"

[node name="Grenade" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_top = 95.0
offset_right = 75.0
offset_bottom = 126.0
toggle_mode = true
text = "Grenade
"

[node name="Mine" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_top = 129.0
offset_right = 70.0
offset_bottom = 160.0
toggle_mode = true
text = "Mine"

[node name="Wall" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_left = 2.0
offset_top = 219.0
offset_right = 72.0
offset_bottom = 250.0
toggle_mode = true
text = "Wall
"

[node name="Turret" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_left = 1.0
offset_top = 189.0
offset_right = 71.0
offset_bottom = 220.0
toggle_mode = true
text = "Turret
"

[node name="Zipline" type="Button" parent="EquipmentSelect"]
layout_mode = 1
offset_top = 160.0
offset_right = 70.0
offset_bottom = 191.0
toggle_mode = true
text = "Zipline
"

[node name="WallRun" type="Button" parent="EquipmentSelect"]
layout_mode = 0
offset_left = 335.0
offset_top = 4.0
offset_right = 407.0
offset_bottom = 35.0
toggle_mode = true
text = "WallRun"

[node name="WallSlide" type="Button" parent="EquipmentSelect"]
layout_mode = 0
offset_left = 328.0
offset_top = 37.0
offset_right = 407.0
offset_bottom = 68.0
toggle_mode = true
text = "WallSlide"

[node name="WallRide" type="Button" parent="EquipmentSelect"]
layout_mode = 0
offset_left = 335.0
offset_top = 70.0
offset_right = 411.0
offset_bottom = 101.0
toggle_mode = true
text = "WallRide"

[node name="Slide" type="Button" parent="EquipmentSelect"]
layout_mode = 0
offset_left = 339.0
offset_top = 102.0
offset_right = 411.0
offset_bottom = 133.0
toggle_mode = true
text = "Slide"

[connection signal="button_down" from="MenuButton" to="." method="_on_menu_button_button_down"]
[connection signal="toggled" from="EquipmentSelect/Grapple" to="." method="_on_grapple_toggled"]
[connection signal="toggled" from="EquipmentSelect/Reel" to="." method="_on_reel_toggled"]
[connection signal="toggled" from="EquipmentSelect/Blast" to="." method="_on_blast_toggled"]
[connection signal="toggled" from="EquipmentSelect/Grenade" to="." method="_on_grenade_toggled"]
[connection signal="toggled" from="EquipmentSelect/Mine" to="." method="_on_mine_toggled"]
[connection signal="toggled" from="EquipmentSelect/Wall" to="." method="_on_wall_toggled"]
[connection signal="toggled" from="EquipmentSelect/Turret" to="." method="_on_turret_toggled"]
[connection signal="toggled" from="EquipmentSelect/Zipline" to="." method="_on_zipline_toggled"]
[connection signal="toggled" from="EquipmentSelect/WallRun" to="." method="_on_wall_run_toggled"]
[connection signal="toggled" from="EquipmentSelect/WallSlide" to="." method="_on_wall_slide_toggled"]
[connection signal="toggled" from="EquipmentSelect/WallRide" to="." method="_on_wall_ride_toggled"]
[connection signal="toggled" from="EquipmentSelect/Slide" to="." method="_on_slide_toggled"]
